Changes for Perl extension PPI-XS

0.904     2017-04-10 15:50:43Z
	- Fix Makefile.PL for perls without '.' in @INC

0.903     2017-04-10 14:50:00Z
	- bad tarball

0.902     2013-02-26
	- Fix "defined @array" deprecation warning

0.901     2009-05-05
	- Incremental release to flush out packaging bugs

0.900     2005-01-28
	- Created initial implementation