@@ -1,0 +1,17 @@
+name                = PPI-XS
+author              = Adam Kennedy <adamk@cpan.org>
+copyright_holder    = Adam Kennedy
+copyright_year      = 2005
+license             = Perl_5
+abstract            = (Minor) XS acceleration for PPI
+
+[@Author::ETHER]
+:version = 0.119
+installer = MakeMaker
+Authority.authority = cpan:ADAMK
+-remove = PodWeaver
+-remove = Test::EOL     ; TODO
+-remove = Test::NoTabs  ; TODO
+
+[PodVersion]
+[PPPort]
